# Token-length-predict

./: .gitignore  README.md  Readme2.docx  evaluation_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  research_questions.md  schema.json
config/: models.json
data/: mixed_prompts_2500_unique_final_nodups_v2.csv  mixed_prompts_2500_unique_final_nodups_v3.txt
scripts/: analyze_output_token_lengths.py  evaluate_real_datasets.py  feature_extractor.py  rebuild_features.py  rebuild_features_enhanced.py  run_inference_vllm.py  train_3class_classifier.py  train_classifiers.py  train_length_classifier.py  train_with_enhanced_features.py
